--- a/.github/workflows/terraformCICD.yml
+++ b/.github/workflows/terraformCICD.yml
@@ -6,6 +6,7 @@ on:
       - main  # Or your desired deployment branch
     paths:
       - 'Terraform/**'  # Trigger only on changes to the Terraform folder
+  workflow_dispatch:
 
 permissions:
   id-token: write
