--- a/.github/workflows/terraformCICD.yml
+++ b/.github/workflows/terraformCICD.yml
@@ -35,35 +35,35 @@ jobs:
           aws-region: ap-south-1
 
 
-   #   - name: Delete Existing IAM Policy for EC2
-   #     run: |
-    #      POLICY_NAME="invoke_lambda_function_and_get_s3_object"
-     #     POLICY_ARN=$(aws iam list-policies --query 'Policies[?PolicyName==`'$POLICY_NAME'`].Arn' --output text)
-      #    if [ -n "$POLICY_ARN" ]; then
-       #     aws iam delete-policy --policy-arn $POLICY_ARN
-        #  else
-         #   echo "IAM Policy $POLICY_NAME does not exist."
-          #fi
+      - name: Delete Existing IAM Policy for EC2
+        run: |
+          POLICY_NAME="invoke_lambda_function_and_get_s3_object"
+          POLICY_ARN=$(aws iam list-policies --query 'Policies[?PolicyName==`'$POLICY_NAME'`].Arn' --output text)
+          if [ -n "$POLICY_ARN" ]; then
+            aws iam delete-policy --policy-arn $POLICY_ARN
+          else
+            echo "IAM Policy $POLICY_NAME does not exist."
+          fi
 
-    #  - name: Delete Existing IAM Policy for CodeDeploy
-     #   run: |
-      #    POLICY_NAME="Policy_for_codeDeploy_EC2"
-       #   POLICY_ARN=$(aws iam list-policies --query 'Policies[?PolicyName==`'$POLICY_NAME'`].Arn' --output text)
-        #  if [ -n "$POLICY_ARN" ]; then
-         #   aws iam delete-policy --policy-arn $POLICY_ARN
-          #else
-         #   echo "IAM Policy $POLICY_NAME does not exist."
-         # fi
+      - name: Delete Existing IAM Policy for CodeDeploy
+        run: |
+          POLICY_NAME="Policy_for_codeDeploy_EC2"
+          POLICY_ARN=$(aws iam list-policies --query 'Policies[?PolicyName==`'$POLICY_NAME'`].Arn' --output text)
+          if [ -n "$POLICY_ARN" ]; then
+            aws iam delete-policy --policy-arn $POLICY_ARN
+          else
+            echo "IAM Policy $POLICY_NAME does not exist."
+          fi
 
- #     - name: Delete Existing IAM Role for CodeDeploy
-  #      run: |
-   #       ROLE_NAME="Policy_for_codeDeploy_EC2-role"
-    #      aws iam delete-role --role-name $ROLE_NAME || echo "IAM Role $ROLE_NAME does not exist."
+      - name: Delete Existing IAM Role for CodeDeploy
+        run: |
+          ROLE_NAME="Policy_for_codeDeploy_EC2-role"
+          aws iam delete-role --role-name $ROLE_NAME || echo "IAM Role $ROLE_NAME does not exist."
 
-     # - name: Delete Existing CodeDeploy Application
-     #   run: |
-      #    APP_NAME="webapp"
-       #   aws deploy delete-application --application-name $APP_NAME || echo "CodeDeploy Application $APP_NAME does not exist."
+      - name: Delete Existing CodeDeploy Application
+        run: |
+          APP_NAME="webapp"
+          aws deploy delete-application --application-name $APP_NAME || echo "CodeDeploy Application $APP_NAME does not exist."
 
       - name: Terraform Init
         run: terraform init
