--- a/.github/workflows/terraform-destroy.yml
+++ b/.github/workflows/terraform-destroy.yml
@@ -1,36 +1,43 @@
 name: Terraform Destroy
 
 on:
-  workflow_dispatch: # Allows you to trigger the workflow manually from the GitHub Actions tab
+  workflow_dispatch: # Allows manual triggering from the GitHub Actions tab
 
 jobs:
   terraform-destroy:
     runs-on: ubuntu-latest
 
     steps:
-    - name: Checkout repository
-      uses: actions/checkout@v2
+      - name: Checkout repository
+        uses: actions/checkout@v2
 
-    - name: Setup Terraform
-      uses: hashicorp/setup-terraform@v2
-      with:
-        terraform_version: 1.0.11 # Specify your Terraform version
+      - name: Setup Terraform
+        uses: hashicorp/setup-terraform@v2
+        with:
+          terraform_version: 1.0.11 # Specify your Terraform version
 
-    - name: Configure AWS credentials
-      uses: aws-actions/configure-aws-credentials@v1
-      with:
-        aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
-        aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-        aws-region: us-west-2 # Specify your AWS region
+      - name: Configure AWS credentials
+        uses: aws-actions/configure-aws-credentials@v1
+        with:
+          aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
+          aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+          aws-region: us-west-2 # Specify your AWS region
 
-    - name: Initialize Terraform
-      run: terraform init
+      - name: Empty S3 Bucket
+        run: |
+          aws s3 rm s3://my-tf-hypha-ritchie-bucket --recursive
+        env:
+          AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
+          AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
 
-    - name: Validate Terraform
-      run: terraform validate
+      - name: Initialize Terraform
+        run: terraform init
 
-    - name: Plan Terraform Destroy
-      run: terraform plan -destroy -out=destroy.tfplan
+      - name: Validate Terraform
+        run: terraform validate
 
-    - name: Apply Terraform Destroy
-      run: terraform apply -auto-approve destroy.tfplan
+      - name: Plan Terraform Destroy
+        run: terraform plan -destroy -out=destroy.tfplan
+
+      - name: Apply Terraform Destroy
+        run: terraform apply -auto-approve destroy.tfplan
